Blender Crashes when using audio output device: JACK #66626

Closed
opened 2019-07-09 22:19:30 +02:00 by Miguel · 7 comments

System Information
Operating system: Linux-4.15.0-54-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 14:18, hash: a4bc6aca0e
Worked: (optional)

Short description of error
Using JACK to sincronize playhead between apps.
When using blender’s playback controlls, the rest of the apps are syncronized.
but when using the playback controls from the other apps, Blender crashes

Exact steps for others to reproduce the error
In preferences i select
. System > Sound > Audio Device > JACK

In the timeline i select
. Playback > Sync mode > AV - Sync

Clicking play in blender all the other apps works fine, but clicking play in any other app makes blender to crash

I uploaded 2 videos showing the steps i followed:

Using blender + QjackCtr + ardour
https://youtu.be/3PwHdF15Nk8

Using only blender + QjackCtl
https://youtu.be/8yUwv22bAqk

**System Information** Operating system: Linux-4.15.0-54-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 14:18, hash: `a4bc6aca0e` Worked: (optional) **Short description of error** Using JACK to sincronize playhead between apps. When using blender’s playback controlls, the rest of the apps are syncronized. but when using the playback controls from the other apps, Blender crashes **Exact steps for others to reproduce the error** In preferences i select . System > Sound > Audio Device > JACK In the timeline i select . Playback > Sync mode > AV - Sync Clicking play in blender all the other apps works fine, but clicking play in any other app makes blender to crash I uploaded 2 videos showing the steps i followed: Using blender + QjackCtr + ardour https://youtu.be/3PwHdF15Nk8 Using only blender + QjackCtl https://youtu.be/8yUwv22bAqk
Author

Added subscriber: @enfoquelibre

Added subscriber: @enfoquelibre
Member

Added subscribers: @neXyon, @lichtwerk

Added subscribers: @neXyon, @lichtwerk
Joerg Mueller was assigned by Philipp Oeser 2019-07-10 09:48:38 +02:00
Member

Cant check this on my system, @neXyon : does this ring a bell?

Cant check this on my system, @neXyon : does this ring a bell?
Joerg Mueller removed their assignment 2019-07-10 11:15:49 +02:00
Sergey Sharybin was assigned by Joerg Mueller 2019-07-10 11:15:49 +02:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

I just git bisected this, commit a4c907af77 causes jack transport synchronization to be almost completely broken.

The reason is that screen in ED_screen_animation_play is NULL.

Reassigning to @sergey.

I just git bisected this, commit a4c907af7760a980c09e46feed92bd93a0906ba9 causes jack transport synchronization to be almost completely broken. The reason is that `screen` in `ED_screen_animation_play` is `NULL`. Reassigning to @sergey.

This issue was referenced by d3b42fc167

This issue was referenced by d3b42fc167e548655ade53ecaa5c3a11b8ef6a81

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66626
No description provided.