source/blender/windowmanager/intern/wm_event_system.c
@@ -3242,11 +3242,23 @@ void wm_event_do_handlers(bContext *C)
 
           if (((is_playing_sound == 1) && (is_playing_screen == 0)) ||
               ((is_playing_sound == 0) && (is_playing_screen == 1))) {
+            wmWindow *context_old_win = CTX_wm_window(C);
+            bScreen *context_screen_win = CTX_wm_screen(C);
+            Scene *context_scene_win = CTX_data_scene(C);
+
+            CTX_wm_window_set(C, win);
+            CTX_wm_screen_set(C, screen);
+            CTX_data_scene_set(C, scene);
+
             ED_screen_animation_play(C, -1, 1);
+
+            CTX_data_scene_set(C, context_scene_win);
+            CTX_wm_screen_set(C, context_screen_win);
+            CTX_wm_window_set(C, context_old_win);
           }
 
           if (is_playing_sound == 0) {
-            const float time = BKE_sound_sync_scene(scene);
+            const float time = BKE_sound_sync_scene(scene_eval);
             if (isfinite(time)) {
               int ncfra = time * (float)FPS + 0.5f;
               if (ncfra != scene->r.cfra) {
